// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/conan/index getDigest handles bad registries 1`] = `null`;

exports[`datasource/conan/index getDigest handles bad registries 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "fake.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://fake.bintray.com/v2/conans/search?q=poco/fakeversion",
  },
]
`;

exports[`datasource/conan/index getDigest handles bad return 1`] = `null`;

exports[`datasource/conan/index getDigest handles bad return 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "conan.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://conan.bintray.com/v2/conans/search?q=fakepackage",
  },
]
`;

exports[`datasource/conan/index getDigest handles matched packages 1`] = `"@conan/test"`;

exports[`datasource/conan/index getDigest handles missing packages 1`] = `null`;

exports[`datasource/conan/index getDigest handles unmatched packages 1`] = `""`;

exports[`datasource/conan/index getReleases handles bad registries 1`] = `null`;

exports[`datasource/conan/index getReleases handles bad registries 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "fake.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://fake.bintray.com/v2/conans/search?q=poco",
  },
]
`;

exports[`datasource/conan/index getReleases handles bad return 1`] = `null`;

exports[`datasource/conan/index getReleases handles bad return 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "conan.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://conan.bintray.com/v2/conans/search?q=fakepackage",
  },
]
`;

exports[`datasource/conan/index getReleases handles missing packages 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "conan.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://conan.bintray.com/v2/conans/search?q=fakepackage",
  },
]
`;

exports[`datasource/conan/index getReleases processes real versioned data 1`] = `
Object {
  "registryUrl": "https://conan.bintray.com",
  "releases": Array [
    Object {
      "newDigest": " ",
      "version": "1.8.1",
    },
    Object {
      "newDigest": " ",
      "version": "1.9.3",
    },
    Object {
      "newDigest": " ",
      "version": "1.9.4",
    },
    Object {
      "newDigest": " ",
      "version": "1.10.0",
    },
    Object {
      "newDigest": " ",
      "version": "1.10.1",
    },
  ],
}
`;

exports[`datasource/conan/index getReleases processes real versioned data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "conan.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://conan.bintray.com/v2/conans/search?q=poco",
  },
]
`;

exports[`datasource/conan/index lookupConanPackage handles malformed packages 1`] = `
Object {
  "releases": Array [
    Object {
      "newDigest": " ",
      "version": "1.9.3",
    },
  ],
}
`;

exports[`datasource/conan/index lookupConanPackage handles missing slash on registries 1`] = `
Object {
  "releases": Array [],
}
`;

exports[`datasource/conan/index lookupConanPackage handles missing slash on registries 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "fake.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://fake.bintray.com/v2/conans/search?q=poco",
  },
]
`;

exports[`datasource/conan/index lookupConanPackage handles non 404 errors 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "fake.bintray.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://fake.bintray.com/v2/conans/search?q=poco",
  },
]
`;
